--- a/package.json
+++ b/package.json
@@ -19,8 +19,17 @@
     "@angular/platform-browser": "~11.0.5",
     "@angular/platform-browser-dynamic": "~11.0.5",
     "@angular/router": "~11.0.5",
+    "@capacitor-community/http": "^0.3.0",
     "@capacitor/core": "2.4.6",
+    "@capacitor/ios": "^2.4.6",
+    "@ionic-native/http": "^5.31.1",
+    "@ionic-native/splash-screen": "^5.31.1",
+    "@ionic-native/status-bar": "^5.31.1",
     "@ionic/angular": "^5.5.2",
+    "cordova-plugin-advanced-http": "^3.1.0",
+    "cordova-plugin-file": "^6.0.2",
+    "cordova-plugin-splashscreen": "^6.0.0",
+    "cordova-plugin-statusbar": "^2.4.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
